IF (BUILD_DEMOS)
  IF( DTAUDIO_AVAILABLE AND DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
    ADD_SUBDIRECTORY(fireFighter)
  ENDIF(DTAUDIO_AVAILABLE AND DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
  
  IF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
    ADD_SUBDIRECTORY(TankTargetTutorial)
  ENDIF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
  
ENDIF (BUILD_DEMOS)