
if (RTI1516e_INCLUDE_DIR)

SET(LIB_NAME     dtHLAGM_rti1516e)

SET(DTHLAGM_RTI1516E_LIB_BUILT YES CACHE STRING "Whether the hla1516e plugin for dtHLAGM was built" FORCE)

INCLUDE_DIRECTORIES(${RTI1516e_INCLUDE_DIR})

file(GLOB LIB_PUBLIC_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET(LIB_SOURCES
rti1516eambassador.cpp
rti1516eregion.cpp
rti1516eutil.cpp
)

set(LIB_EXTERNAL_DEPS
   OSGSIM_LIBRARY
   OPENTHREADS_LIBRARY
)

set(LIB_DEPS
   ${DTUTIL_LIBRARY}
   ${DTGAME_LIBRARY}
   ${DTHLAGM_LIBRARY}
  ${RTI1516e_LIBRARIES}
 )


DELTA3D_ADD_LIBRARY(${LIB_NAME} NONE SHARED)

IF (WIN32)
   TARGET_LINK_LIBRARIES(${LIB_NAME} wsock32)
ENDIF (WIN32)

IF (MSVC_IDE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4290") #ignore the C4290 warning
ENDIF (MSVC_IDE)

endif (RTI1516e_INCLUDE_DIR)
