IF (BUILD_DEMOS)
  IF(DTACTORS_AVAILABLE AND DTAUDIO_AVAILABLE AND DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(fireFighter)
  ENDIF(DTACTORS_AVAILABLE AND DTAUDIO_AVAILABLE AND DTGUI_AVAILABLE)
  
  IF(DTACTORS_AVAILABLE AND DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(TankTargetTutorial)
  ENDIF(DTACTORS_AVAILABLE AND DTGUI_AVAILABLE)
  
ENDIF (BUILD_DEMOS)