
ADD_SUBDIRECTORY(testAAR)
ADD_SUBDIRECTORY(testActorLibrary)
ADD_SUBDIRECTORY(testAI)
ADD_SUBDIRECTORY(testAnim)
ADD_SUBDIRECTORY(testApp)
ADD_SUBDIRECTORY(testAudio)
ADD_SUBDIRECTORY(testBumpMap)
ADD_SUBDIRECTORY(testClient)
ADD_SUBDIRECTORY(testClouds)
ADD_SUBDIRECTORY(testEchoServer)
ADD_SUBDIRECTORY(testEffects)
ADD_SUBDIRECTORY(testGameActorLibrary)
ADD_SUBDIRECTORY(testGameEnvironment)
ADD_SUBDIRECTORY(testGUI)

if(BUILD_PLIB)
    ADD_SUBDIRECTORY(testInput)
ENDIF(BUILD_PLIB)

ADD_SUBDIRECTORY(testLights)
ADD_SUBDIRECTORY(testMap)
ADD_SUBDIRECTORY(testMotionModels)
ADD_SUBDIRECTORY(testNetwork)
ADD_SUBDIRECTORY(testPhysics)
ADD_SUBDIRECTORY(testPython)
ADD_SUBDIRECTORY(testRecorder)
ADD_SUBDIRECTORY(testShaders)
ADD_SUBDIRECTORY(testSound)
ADD_SUBDIRECTORY(testStateManager)
ADD_SUBDIRECTORY(testTerrain)
ADD_SUBDIRECTORY(testTrigger)
ADD_SUBDIRECTORY(testWeather)
ADD_SUBDIRECTORY(testWidget)
ADD_SUBDIRECTORY(testWin)
