# MUST Build these libraries because they are needed for the unit tests
IF (BUILD_TESTS OR BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(testActorLibrary)
  ADD_SUBDIRECTORY(testGameActorLibrary)
ENDIF (BUILD_TESTS OR BUILD_EXAMPLES)

IF (BUILD_EXAMPLES)
  
  IF(DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(testAAR)
  ENDIF(DTGUI_AVAILABLE)
  
  IF(DTANIM_AVAILABLE)
    ADD_SUBDIRECTORY(testAI)
    ADD_SUBDIRECTORY(testAnim)
  ENDIF (DTANIM_AVAILABLE)
  
  ADD_SUBDIRECTORY(testApp)

  IF (DTAUDIO_AVAILABLE)
    ADD_SUBDIRECTORY(testAudio)
  ENDIF (DTAUDIO_AVAILABLE)
  
  ADD_SUBDIRECTORY(testBumpMap)
  
  IF (DTNETGM_AVAILABLE)
    ADD_SUBDIRECTORY(testClient)
    ADD_SUBDIRECTORY(testEchoServer)
  ENDIF (DTNETGM_AVAILABLE)

  ADD_SUBDIRECTORY(testClouds)
  ADD_SUBDIRECTORY(testEffects)

  ADD_SUBDIRECTORY(testGameEnvironment)
  
  IF(DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(testGUI)
    ADD_SUBDIRECTORY(testHUD)
  ENDIF(DTGUI_AVAILABLE)
  
  IF(BUILD_PLIB AND DTGUI_AVAILABLE)
      ADD_SUBDIRECTORY(testInput)
  ENDIF(BUILD_PLIB AND DTGUI_AVAILABLE)

  ADD_SUBDIRECTORY(testLights)
  ADD_SUBDIRECTORY(testMap)
  
  IF (DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(testMotionModels)
  ENDIF (DTGUI_AVAILABLE)

  ADD_SUBDIRECTORY(testMultiWin)
  
  IF (DTNET_AVAILABLE)
    ADD_SUBDIRECTORY(testNetwork)
  ENDIF (DTNET_AVAILABLE)
  
  ADD_SUBDIRECTORY(testPhysics)

  IF (BUILD_BINDINGS)
    ADD_SUBDIRECTORY(testPython)
  ENDIF(BUILD_BINDINGS)

  ADD_SUBDIRECTORY(testRecorder)
  ADD_SUBDIRECTORY(testShaders)
  
  IF (DTAUDIO_AVAILABLE)
    ADD_SUBDIRECTORY(testSound)
  ENDIF (DTAUDIO_AVAILABLE)
  
  ADD_SUBDIRECTORY(testStateManager)
  
  IF (DTTERRAIN_AVAILABLE)
    ADD_SUBDIRECTORY(testTerrain)
  ENDIF (DTTERRAIN_AVAILABLE)
  
  ADD_SUBDIRECTORY(testTrigger)
  ADD_SUBDIRECTORY(testWeather)
  
  IF (FLTK_FOUND)
    ADD_SUBDIRECTORY(testWidget)
  ENDIF (FLTK_FOUND)
  
  IF(DTGUI_AVAILABLE)
    ADD_SUBDIRECTORY(testWin)
  ENDIF(DTGUI_AVAILABLE)
ENDIF (BUILD_EXAMPLES)
