# MUST Build these libraries because they are needed for the unit tests
IF (BUILD_TESTS OR BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(testActorLibrary)
  ADD_SUBDIRECTORY(testGameActorLibrary)
ENDIF (BUILD_TESTS OR BUILD_EXAMPLES)

IF (BUILD_EXAMPLES)
  
  IF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
    ADD_SUBDIRECTORY(testAAR)
  ENDIF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
  
  IF(DTANIM_AVAILABLE)
    ADD_SUBDIRECTORY(testAI)
    ADD_SUBDIRECTORY(testAnim)
    ADD_SUBDIRECTORY(testProceduralAnimation)
  ENDIF (DTANIM_AVAILABLE)
  
  ADD_SUBDIRECTORY(testApp)

  IF (DTAUDIO_AVAILABLE)
    ADD_SUBDIRECTORY(testAudio)
  ENDIF (DTAUDIO_AVAILABLE)
  
  ADD_SUBDIRECTORY(testBumpMap)
  
  IF (DTNETGM_AVAILABLE)
    ADD_SUBDIRECTORY(testClient)
    ADD_SUBDIRECTORY(testEchoServer)
  ENDIF (DTNETGM_AVAILABLE)
  
  IF (DTAUDIO_AVAILABLE)
    ADD_SUBDIRECTORY(testDirector)
  ENDIF (DTAUDIO_AVAILABLE)
  
  IF (DTDIS_AVAILABLE)
    ADD_SUBDIRECTORY(testDIS)
  ENDIF (DTDIS_AVAILABLE)
  
  ADD_SUBDIRECTORY(testClouds)
  ADD_SUBDIRECTORY(testEffects)

  ADD_SUBDIRECTORY(testGameActorComponents)
  ADD_SUBDIRECTORY(testGameEnvironment)
  
  IF(DTGUI_AVAILABLE)
    IF(NOT BUILD_WITH_OLD_CEGUI)
      ADD_SUBDIRECTORY(testGUI)
    ELSE (NOT BUILD_WITH_OLD_CEGUI)
      ADD_SUBDIRECTORY(testHUD)
    ENDIF(NOT BUILD_WITH_OLD_CEGUI)
  ENDIF(DTGUI_AVAILABLE)
  
  IF(BUILD_PLIB AND DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
      ADD_SUBDIRECTORY(testInput)
  ENDIF(BUILD_PLIB AND DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)

  ADD_SUBDIRECTORY(testLights)
  ADD_SUBDIRECTORY(testMap)
  ADD_SUBDIRECTORY(testPreRender)
  
  IF (DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
      ADD_SUBDIRECTORY(testMotionModels)
  ENDIF (DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)

  ADD_SUBDIRECTORY(testMultiWin)
  ADD_SUBDIRECTORY(testNestedView)
  
  IF (DTNET_AVAILABLE)
    ADD_SUBDIRECTORY(testNetwork)
  ENDIF (DTNET_AVAILABLE)

  IF (BUILD_BINDINGS)
    ADD_SUBDIRECTORY(testPython)
  ENDIF(BUILD_BINDINGS)

  IF (DTQT_AVAILABLE)
    ADD_SUBDIRECTORY(testQt)
  ENDIF (DTQT_AVAILABLE)

  ADD_SUBDIRECTORY(testShaders)
  
  IF (DTAUDIO_AVAILABLE)
    ADD_SUBDIRECTORY(testSound)
  ENDIF (DTAUDIO_AVAILABLE)
  
  IF (DTTERRAIN_AVAILABLE)
    ADD_SUBDIRECTORY(testTerrain)
  ENDIF (DTTERRAIN_AVAILABLE)
  
  ADD_SUBDIRECTORY(testWeather)
    
  IF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
      ADD_SUBDIRECTORY(testWin)
  ENDIF(DTGUI_AVAILABLE AND NOT BUILD_WITH_OLD_CEGUI)
ENDIF (BUILD_EXAMPLES)
